# oadig

./: .gitignore  .rusty-hook.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml
scripts/: pre-commit.sh  pre-push.sh  release.sh  smoke.sh
src/: cli.rs  error.rs  loader.rs  main.rs  output.rs  resolver.rs  warnings.rs
src/commands/: components.rs  convert.rs  filter.rs  info.rs  mod.rs  operation.rs  operations.rs  overview.rs  paths.rs  request.rs  requests.rs  response.rs  responses.rs  schema.rs  schemas.rs  search.rs  spec_version.rs  stats.rs  statuses.rs  tags.rs  validate.rs
tests/: phase1.rs
tests/fixtures/: README.md  circular.yaml  openapi30-nullable.yaml  petstore.json  petstore.yaml  swagger2-with-ref.yaml  swagger2.yaml
