[package]
name = "oadig"
version = "0.1.0"
edition = "2024"
description = "Extract specific information from bloated OpenAPI specs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/misebox/oadig"
homepage = "https://github.com/misebox/oadig"
readme = "README.md"
keywords = ["openapi", "swagger", "cli", "api", "yaml"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
anyhow = "1"
clap = { version = "4.6", features = ["derive"] }
oas3 = { version = "0.21", default-features = false }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_path_to_error = "0.1"
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
rusty-hook = "0.11"

[profile.release]
lto = "thin"
strip = true
